@@ -16,64 +16,46 @@
  */
 package org.apache.commons.configuration2;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.fail;
+import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertThrows;
 
 import java.awt.event.KeyEvent;
 import java.net.InetAddress;
-import java.net.UnknownHostException;
 import java.util.Arrays;
 import java.util.List;
 import java.util.Map;
 
 import org.apache.commons.configuration2.interpol.ConfigurationInterpolator;
-import org.apache.commons.configuration2.interpol.Lookup;
-
-import junitx.framework.Assert;
 
 /**
- * A helper class that defines a bunch of tests related to variable
- * interpolation. It can be used for running these tests on different
- * configuration implementations.
+ * A helper class that defines a bunch of tests related to variable interpolation. It can be used for running these
+ * tests on different configuration implementations.
  */
-public class InterpolationTestHelper
-{
+public class InterpolationTestHelper {
     /**
      * Tests accessing and manipulating the interpolator object.
      *
      * @param config the configuration to test
      */
-    public static void testGetInterpolator(final AbstractConfiguration config)
-    {
+    public static void testGetInterpolator(final AbstractConfiguration config) {
         config.addProperty("var", "${echo:testVar}");
         final ConfigurationInterpolator interpol = config.getInterpolator();
-        interpol.registerLookup("echo", new Lookup()
-        {
-            @Override
-            public Object lookup(final String varName)
-            {
-                return "Value of variable " + varName;
-            }
-        });
-        assertEquals("Wrong value of echo variable",
-                "Value of variable testVar", config.getString("var"));
+        interpol.registerLookup("echo", varName -> "Value of variable " + varName);
+        assertEquals("Value of variable testVar", config.getString("var"));
     }
 
     /**
-     * Tests obtaining a configuration with all variables replaced by their
-     * actual values.
+     * Tests obtaining a configuration with all variables replaced by their actual values.
      *
      * @param config the configuration to test
      * @return the interpolated configuration
      */
-    public static Configuration testInterpolatedConfiguration(
-            final AbstractConfiguration config)
-    {
+    public static Configuration testInterpolatedConfiguration(final AbstractConfiguration config) {
         config.setProperty("applicationRoot", "/home/applicationRoot");
         config.setProperty("db", "${applicationRoot}/db/hypersonic");
         config.setProperty("inttest.interpol", "${unknown.property}");
-        config.setProperty("intkey.code",
-                "${const:java.awt.event.KeyEvent.VK_CANCEL}");
+        config.setProperty("intkey.code", "${const:java.awt.event.KeyEvent.VK_CANCEL}");
         config.setProperty("inttest.sysprop", "${sys:java.version}");
         config.setProperty("inttest.numvalue", "3\\,1415");
         config.setProperty("inttest.value", "${inttest.numvalue}");
@@ -81,22 +63,13 @@ public class InterpolationTestHelper
         config.addProperty("inttest.list", "${inttest.value}");
 
         final Configuration c = config.interpolatedConfiguration();
-        assertEquals("Property not replaced",
-                "/home/applicationRoot/db/hypersonic", c.getProperty("db"));
-        assertEquals("Const variable not replaced", KeyEvent.VK_CANCEL,
-                c.getInt("intkey.code"));
-        assertEquals("Sys property not replaced", System
-                .getProperty("java.version"), c.getProperty("inttest.sysprop"));
-        assertEquals("Delimiter value not replaced", "3,1415", c
-                .getProperty("inttest.value"));
+        assertEquals("/home/applicationRoot/db/hypersonic", c.getProperty("db"));
+        assertEquals(KeyEvent.VK_CANCEL, c.getInt("intkey.code"));
+        assertEquals(System.getProperty("java.version"), c.getProperty("inttest.sysprop"));
+        assertEquals("3,1415", c.getProperty("inttest.value"));
         final List<?> lst = (List<?>) c.getProperty("inttest.list");
-        assertEquals("Wrong number of list elements", 2, lst.size());
-        assertEquals("List element 0 not replaced",
-                "/home/applicationRoot/db/hypersonic", lst.get(0));
-        assertEquals("List element 1 not replaced", "3,1415", lst
-                        .get(1));
-        assertEquals("Unresolvable variable not found",
-                "${unknown.property}", c.getProperty("inttest.interpol"));
+        assertEquals(Arrays.asList("/home/applicationRoot/db/hypersonic", "3,1415"), lst);
+        assertEquals("${unknown.property}", c.getProperty("inttest.interpol"));
 
         return c;
     }
@@ -106,28 +79,23 @@ public class InterpolationTestHelper
      *
      * @param config the configuration to test
      */
-    public static void testInterpolation(final Configuration config)
-    {
+    public static void testInterpolation(final Configuration config) {
         config.setProperty("applicationRoot", "/home/applicationRoot");
         config.setProperty("db", "${applicationRoot}/db/hypersonic");
         final String unInterpolatedValue = "${applicationRoot2}/db/hypersonic";
         config.setProperty("dbFailedInterpolate", unInterpolatedValue);
         final String dbProp = "/home/applicationRoot/db/hypersonic";
 
-        assertEquals("Checking interpolated variable", dbProp, config
-                .getString("db"));
-        assertEquals("lookup fails, leave variable as is", config
-                .getString("dbFailedInterpolate"), unInterpolatedValue);
+        assertEquals(dbProp, config.getString("db"));
+        assertEquals(unInterpolatedValue, config.getString("dbFailedInterpolate"));
 
         config.setProperty("arrayInt", "${applicationRoot}/1");
         final String[] arrayInt = config.getStringArray("arrayInt");
-        assertEquals("check first entry was interpolated",
-                "/home/applicationRoot/1", arrayInt[0]);
+        assertEquals("/home/applicationRoot/1", arrayInt[0]);
 
-        config.addProperty("path", Arrays.asList("/temp", "C:\\Temp","/usr/local/tmp"));
+        config.addProperty("path", Arrays.asList("/temp", "C:\\Temp", "/usr/local/tmp"));
         config.setProperty("path.current", "${path}");
-        assertEquals("Interpolation with multi-valued property",
-                "/temp", config.getString("path.current"));
+        assertEquals("/temp", config.getString("path.current"));
     }
 
     /**
@@ -135,14 +103,10 @@ public class InterpolationTestHelper
      *
      * @param config the configuration to test
      */
-    public static void testInterpolationConstants(final Configuration config)
-    {
-        config.addProperty("key.code",
-                "${const:java.awt.event.KeyEvent.VK_CANCEL}");
-        assertEquals("Wrong value of constant variable",
-                KeyEvent.VK_CANCEL, config.getInt("key.code"));
-        assertEquals("Wrong value when fetching constant from cache",
-                KeyEvent.VK_CANCEL, config.getInt("key.code"));
+    public static void testInterpolationConstants(final Configuration config) {
+        config.addProperty("key.code", "${const:java.awt.event.KeyEvent.VK_CANCEL}");
+        assertEquals(KeyEvent.VK_CANCEL, config.getInt("key.code"));
+        assertEquals(KeyEvent.VK_CANCEL, config.getInt("key.code"));
     }
 
     /**
@@ -150,33 +114,26 @@ public class InterpolationTestHelper
      *
      * @param config the configuration to test
      */
-    public static void testInterpolationEnvironment(final Configuration config)
-    {
+    public static void testInterpolationEnvironment(final Configuration config) {
         final Map<String, String> env = System.getenv();
-        for (final Map.Entry<String, String> e : env.entrySet())
-        {
+        for (final Map.Entry<String, String> e : env.entrySet()) {
             config.addProperty("prop" + e.getKey(), "${env:" + e.getKey() + "}");
         }
 
-        for (final Map.Entry<String, String> e : env.entrySet())
-        {
-            assertEquals("Wrong value for environment property " + e.getKey(),
-                    e.getValue(), config.getString("prop" + e.getKey()));
+        for (final Map.Entry<String, String> e : env.entrySet()) {
+            assertEquals(e.getValue(), config.getString("prop" + e.getKey()), "Wrong value for environment property " + e.getKey());
         }
     }
 
     /**
-     * Tests whether a variable can be escaped, so that it won't be
-     * interpolated.
+     * Tests whether a variable can be escaped, so that it won't be interpolated.
      *
      * @param config the configuration to test
      */
-    public static void testInterpolationEscaped(final Configuration config)
-    {
+    public static void testInterpolationEscaped(final Configuration config) {
         config.addProperty("var", "x");
         config.addProperty("escVar", "Use the variable $${${var}}.");
-        assertEquals("Wrong escaped variable", "Use the variable ${x}.",
-                config.getString("escVar"));
+        assertEquals("Use the variable ${x}.", config.getString("escVar"));
     }
 
     /**
@@ -184,53 +141,30 @@ public class InterpolationTestHelper
      *
      * @param config the configuration to test
      */
-    public static void testInterpolationLocalhost(final Configuration config)
-    {
-        final String[] localhostKeys =
-        { "name", "canonical-name", "address" };
-        String[] localhostValues = null;
-        try {
-            localhostValues = new String[] {
-                    InetAddress.getLocalHost().getHostName(),
-                    InetAddress.getLocalHost().getCanonicalHostName(),
-                    InetAddress.getLocalHost().getHostAddress() };
-        } catch (final UnknownHostException e) {
-            Assert.fail(e);
-        }
-        for (int i = 0; i < localhostKeys.length; i++)
-        {
+    public static void testInterpolationLocalhost(final Configuration config) {
+        final String[] localhostKeys = {"name", "canonical-name", "address"};
+        final InetAddress localHost = assertDoesNotThrow(InetAddress::getLocalHost);
+        final String[] localhostValues = {localHost.getHostName(), localHost.getCanonicalHostName(), localHost.getHostAddress()};
+        for (int i = 0; i < localhostKeys.length; i++) {
             config.addProperty("prop" + i, "${localhost:" + localhostKeys[i] + "}");
         }
 
-        for (int i = 0; i < localhostKeys.length; i++)
-        {
-            assertEquals("Wrong value for system property "
-                    + localhostKeys[i], localhostValues[i],
-                    config.getString("prop" + i));
+        for (int i = 0; i < localhostKeys.length; i++) {
+            assertEquals(localhostValues[i], config.getString("prop" + i), "Wrong value for system property " + localhostKeys[i]);
         }
     }
 
     /**
-     * Tests an invalid interpolation that results in an infinite loop. This
-     * loop should be detected and an exception should be thrown.
+     * Tests an invalid interpolation that results in an infinite loop. This loop should be detected and an exception should
+     * be thrown.
      *
      * @param config the configuration to test
      */
-    public static void testInterpolationLoop(final Configuration config)
-    {
+    public static void testInterpolationLoop(final Configuration config) {
         config.setProperty("test.a", "${test.b}");
         config.setProperty("test.b", "${test.a}");
 
-        try
-        {
-            config.getString("test.a");
-            fail("IllegalStateException should have been thrown for looped property references");
-        }
-        catch (final IllegalStateException e)
-        {
-            // ok
-        }
-
+        assertThrows(IllegalStateException.class, () -> config.getString("test.a"));
     }
 
     /**
@@ -238,16 +172,13 @@ public class InterpolationTestHelper
      *
      * @param config the configuration to test
      */
-    public static void testInterpolationSubset(final Configuration config)
-    {
-        config.addProperty("test.a", new Integer(42));
+    public static void testInterpolationSubset(final Configuration config) {
+        config.addProperty("test.a", Integer.valueOf(42));
         config.addProperty("test.b", "${test.a}");
-        assertEquals("Wrong interpolated value", 42, config
-                .getInt("test.b"));
+        assertEquals(42, config.getInt("test.b"));
         final Configuration subset = config.subset("test");
-        assertEquals("Wrong string property", "42", subset
-                .getString("b"));
-        assertEquals("Wrong int property", 42, subset.getInt("b"));
+        assertEquals("42", subset.getString("b"));
+        assertEquals(42, subset.getInt("b"));
     }
 
     /**
@@ -255,20 +186,14 @@ public class InterpolationTestHelper
      *
      * @param config the configuration to test
      */
-    public static void testInterpolationSystemProperties(final Configuration config)
-    {
-        final String[] sysProperties =
-        { "java.version", "java.vendor", "os.name", "java.class.path" };
-        for (int i = 0; i < sysProperties.length; i++)
-        {
+    public static void testInterpolationSystemProperties(final Configuration config) {
+        final String[] sysProperties = {"java.version", "java.vendor", "os.name", "java.class.path"};
+        for (int i = 0; i < sysProperties.length; i++) {
             config.addProperty("prop" + i, "${sys:" + sysProperties[i] + "}");
         }
 
-        for (int i = 0; i < sysProperties.length; i++)
-        {
-            assertEquals("Wrong value for system property "
-                    + sysProperties[i], System.getProperty(sysProperties[i]),
-                    config.getString("prop" + i));
+        for (int i = 0; i < sysProperties.length; i++) {
+            assertEquals(System.getProperty(sysProperties[i]), config.getString("prop" + i), "Wrong value for system property " + sysProperties[i]);
         }
     }
 
@@ -277,33 +202,24 @@ public class InterpolationTestHelper
      *
      * @param config the configuration to test
      */
-    public static void testInterpolationUnknownProperty(final Configuration config)
-    {
+    public static void testInterpolationUnknownProperty(final Configuration config) {
         config.addProperty("test.interpol", "${unknown.property}");
-        assertEquals("Wrong interpolated unknown property",
-                "${unknown.property}", config.getString("test.interpol"));
+        assertEquals("${unknown.property}", config.getString("test.interpol"));
     }
 
     /**
-     * Tests an interpolation over multiple levels (i.e. the replacement of a
-     * variable is another variable and so on).
+     * Tests an interpolation over multiple levels (i.e. the replacement of a variable is another variable and so on).
      *
      * @param config the configuration to test
      */
-    public static void testMultipleInterpolation(final Configuration config)
-    {
+    public static void testMultipleInterpolation(final Configuration config) {
         config.setProperty("test.base-level", "/base-level");
-        config
-                .setProperty("test.first-level",
-                        "${test.base-level}/first-level");
-        config.setProperty("test.second-level",
-                "${test.first-level}/second-level");
-        config.setProperty("test.third-level",
-                "${test.second-level}/third-level");
+        config.setProperty("test.first-level", "${test.base-level}/first-level");
+        config.setProperty("test.second-level", "${test.first-level}/second-level");
+        config.setProperty("test.third-level", "${test.second-level}/third-level");
 
         final String expectedValue = "/base-level/first-level/second-level/third-level";
 
-        assertEquals(config.getString("test.third-level"),
-                        expectedValue);
+        assertEquals(expectedValue, config.getString("test.third-level"));
     }
 }
