@@ -17,15 +17,15 @@
 
 package org.apache.commons.configuration2;
 
-import static org.junit.Assert.assertEquals;
-import static org.junit.Assert.assertTrue;
+import static org.junit.jupiter.api.Assertions.assertEquals;
+import static org.junit.jupiter.api.Assertions.assertTrue;
 
 import java.util.Iterator;
 import java.util.Map;
 
-import org.junit.After;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.AfterEach;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 
 /**
  */
@@ -33,34 +33,18 @@ public class TestConfigurationSet {
 
     ConfigurationMap.ConfigurationSet set;
 
-    String[] properties = {
-            "booleanProperty",
-            "doubleProperty",
-            "floatProperty",
-            "intProperty",
-            "longProperty",
-            "shortProperty",
-            "stringProperty"
-    };
+    String[] properties = {"booleanProperty", "doubleProperty", "floatProperty", "intProperty", "longProperty", "shortProperty", "stringProperty"};
 
-    Object[] values = {
-            Boolean.TRUE,
-            new Double(Double.MAX_VALUE),
-            new Float(Float.MAX_VALUE),
-            new Integer(Integer.MAX_VALUE),
-            new Long(Long.MAX_VALUE),
-            new Short(Short.MAX_VALUE),
-            "This is a string"
-    };
+    Object[] values = {Boolean.TRUE, Double.valueOf(Double.MAX_VALUE), Float.valueOf(Float.MAX_VALUE), Integer.valueOf(Integer.MAX_VALUE),
+        Long.valueOf(Long.MAX_VALUE), Short.valueOf(Short.MAX_VALUE), "This is a string"};
 
     /**
      * Set up instance variables required by this test case.
      */
-    @Before
-    public void setUp() throws Exception
-    {
+    @BeforeEach
+    public void setUp() throws Exception {
         final BaseConfiguration configuration = new BaseConfiguration();
-        for(int i = 0; i < properties.length ; i++) {
+        for (int i = 0; i < properties.length; i++) {
             configuration.setProperty(properties[i], values[i]);
         }
         set = new ConfigurationMap.ConfigurationSet(configuration);
@@ -69,15 +53,9 @@ public class TestConfigurationSet {
     /**
      * Tear down instance variables required by this test case.
      */
-    @After
-    public void tearDown()
-    {
+    @AfterEach
+    public void tearDown() {
         set = null;
-    }
-
-    @Test
-    public void testSize() {
-        assertEquals("Entry set does not match properties size.", properties.length, set.size());
     }
 
     /**
@@ -86,19 +64,23 @@ public class TestConfigurationSet {
     @Test
     public void testIterator() {
         final Iterator<Map.Entry<Object, Object>> iterator = set.iterator();
-        while(iterator.hasNext()) {
+        while (iterator.hasNext()) {
             final Map.Entry<Object, Object> entry = iterator.next();
             boolean found = false;
-            for(int i = 0; i < properties.length; i++) {
-                if(entry.getKey().equals(properties[i])) {
-                    assertEquals("Incorrect value for property " +
-                            properties[i],values[i],entry.getValue());
+            for (int i = 0; i < properties.length; i++) {
+                if (entry.getKey().equals(properties[i])) {
+                    assertEquals(values[i], entry.getValue(), "Incorrect value for property " + properties[i]);
                     found = true;
                 }
             }
-            assertTrue("Could not find property " + entry.getKey(),found);
+            assertTrue(found, "Could not find property " + entry.getKey());
             iterator.remove();
         }
-        assertTrue("Iterator failed to remove all properties.",set.isEmpty());
+        assertTrue(set.isEmpty());
+    }
+
+    @Test
+    public void testSize() {
+        assertEquals(properties.length, set.size());
     }
 }
